@@ -67,19 +67,29 @@ public class TweetYouTubeFragment extends YouTubePlayerFragment implements
         if (url.contains("youtube")) { // normal youtube link
             // first get the youtube video code
             int start = url.indexOf("v=") + 2;
-            int end = url.length();
+            int end;
             if (url.substring(start).contains("&")) {
                 end = url.indexOf("&");
+                video = url.substring(start, end);
+            } else if (url.substring(start).contains("?")) {
+                end = url.indexOf("?");
+                video = url.substring(start, end);
+            } else {
+                video = url.substring(start);
             }
-            video = url.substring(start, end);
         } else { // shortened youtube link
             // first get the youtube video code
             int start = url.indexOf(".be/") + 4;
-            int end = url.length();
+            int end;
             if (url.substring(start).contains("&")) {
                 end = url.indexOf("&");
+                video = url.substring(start, end);
+            } else if (url.substring(start).contains("?")) {
+                end = url.indexOf("?");
+                video = url.substring(start, end);
+            } else {
+                video = url.substring(start);
             }
-            video = url.substring(start, end);
         }
 
         youTubePlayer.loadVideo(video);
